# vscode-cc65

./: .gitignore  .gitmodules  AI_PROMPT.md  CMakeLists.txt  README.md
.github/: copilot-instructions.md
src/: help.txt  main.c  main.hlp  main.s
tools/: CMakeLists.txt  cc65.cmake  cc65_wrapper.cmake  intellisense_fix.h  rp6502.cmake  rp6502.py
